# gardn.website

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  caddy-root.crt  docker-compose.dev.yml  docker-compose.yml  manage.py  progress.md  pyproject.toml  trust-caddy-cert.sh
.github/workflows/: ci.yml
caddy/: Caddyfile
docker/: entrypoint.sh
docs/: game-flow.md
docs/plans/: 2026-03-05-redis-s3-improvements.md
embeds/: tests.py  urls.py  views.py
game/: admin.py  evidence.py  models.py  tasks.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_seed_quests.py  0003_increase_url_max_length.py  0004_site_evidence.py  0005_increase_garden_plot_title_length.py  0006_gardenvisit.py  0007_gameprofile_appearance_configured_and_more.py
gardn/: __init__.py  asgi.py  celery.py  context.py  middleware.py  settings.py  test_settings.py  urls.py  utils.py  wsgi.py
harvests/: admin.py  apps.py  cache.py  metadata.py  models.py  tasks.py  urls.py  views.py
harvests/migrations/: 0001_initial.py  0002_harvest_tags.py  0003_harvest_mastodon_posted.py  0004_increase_url_max_length.py
indieauth_client/: apps.py  auth.py  tests.py  urls.py  views.py
mastodon_auth/: admin.py  auth.py  models.py  urls.py  views.py
mastodon_auth/migrations/: 0001_initial.py
picks/: models.py  rate_limit.py  tests.py  urls.py  views.py
plants/: models.py  svg.py  svg_cache.py  tests.py  urls.py  views.py
templates/: base.html
tests/: test_game.py  test_harvest_tasks.py  test_home_cache.py  test_settings.py  test_static_storage.py  test_svg_cache.py
(+53 files in other folders)
