[project]
name = "gardn"
version = "0.1.0"
description = "IndieWeb plant-based blogroll"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.1,<6",
  "django-htmx>=1.21.0",
  "whitenoise>=6.8.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "mf2py>=2.0.1",
  "dj-database-url>=2.2.0",
  "psycopg[binary]>=3.2.3",
  "gunicorn>=25.1.0",
  "celery[redis]>=5.4.0",
  "django-storages[s3]>=1.14.0",
]

[dependency-groups]
dev = [
  "fakeredis>=2.26.0",
  "moto[s3]>=5.0.0",
  "ruff>=0.15.5",
]
